2000-09-06  Jeff Hobbs  <hobbs@scriptics.com>

	* README:
	* generic/tk.h:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in: updated to patchlevel 8.4a2

	* generic/tkMessage.c (MessageWidgetObjCmd): initialized result to
	avoid pedantic warning.

	* generic/tkGrab.c (Tk_GrabObjCmd): changed len arg from size_t to
	int to fix pedantic warning.

2000-09-01  Eric Melski  <ericm@ajubasolutions.com>

	* win/makefile.vc (install-libraries): 
	* win/Makefile.in (install-libraries): 
	* unix/Makefile.in (install-libraries): Added tkPlatDecls.h to
	list of header files to install.

	* generic/tk.h: Added #include "tkPlatDecls.h", which declares the
	platform specific component of the public Tk stubs API's.

2000-08-29  Eric Melski  <ericm@ajubasolutions.com>

	* win/tkWinMenu.c (DrawWindowsSystemBitmap): Use scratchDC
	for determining the source's logical coordinates.  Patch from 
	[Bug: 6134 (Markus Oberhumer)].

	* win/tkWinMenu.c (SetDefaults): Compute the indicatorDimensions[]
	under Windows NT/2000 in the same way as under Windows 95/98.
	Patch from [Bug: 6134 (Markus Oberhumer)].

	* win/tkWinFont.c (GetScreenFont): Added a memset() to
	pacify memory checkers.  Patch from [Bug: 6134 (Markus Oberhumer)].

	* library/tkfbox.tcl (::tk::dialog::file::Update): Corrected
	handling of multi-pattern filters (eg, "* *.*"), which was broken
	by the getOpenFile performance patches applied earlier.

2000-08-24  Eric Melski  <ericm@ajubasolutions.com>

	* doc/toplevel.n: 
	* doc/spinbox.n: 
	* doc/scrollbar.n: 
	* doc/scale.n: 
	* doc/menubutton.n: 
	* doc/menu.n: 
	* doc/listbox.n: 
	* doc/entry.n: 
	* doc/frame.n: 
	* doc/message.n: 
	* doc/checkbutton.n: 
	* doc/radiobutton.n: 
	* doc/button.n: 
	* doc/label.n: 
	* doc/canvas.n: 
	* doc/text.n: Fixed Standard Options section to make best use of
	new tab settings in man.macros.

2000-08-24  Mo DeJong  <mdejong@redhat.com>

	* unix/README: Update to account for removal of --enable-gcc.
	* unix/configure.in: